Завершил основную работу с security, заполнил таблицы БД тестовыми данными